filegroup(
    name = "files",
    srcs = [
        "//bin",
        "//sbin",
        "//python/lib:pyspark.zip",
    ] + glob([
        "resource-managers/kubernetes/docker/src/main/dockerfiles/spark/entrypoint.sh",
        "python/lib/**",
        "python/pyspark/**",
    ]),
    visibility = ["//visibility:public"],
)
