filegroup(
    name = "files",
    srcs = [
        "//bin",
        "//sbin",
        "//python/lib:pyspark.zip",
        "//python/lib:files",
        "//python/pyspark:files",
    ] + glob([
        "resource-managers/kubernetes/docker/src/main/dockerfiles/spark/entrypoint.sh",
    ]),
    visibility = ["//visibility:public"],
)
