load("@rules_java//java:defs.bzl", "java_library", "java_test")
load("//:defs.bzl", "scala_rje")

scala_library(
    name = "core",
    srcs = glob([
        "src/main/java/**/*.java",
        "src/main/scala/**/*.scala",
        "src/main/scala-2.12/**/*.scala",
    ]),
    javacopts = [
        "-Xep:GuardedBy:WARN",
    ],
    resource_jars = [
        ":version",
    ],
    resources = glob([
        "src/main/resources/**",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//common/kvstore",
        "//common/network-common",
        "//common/network-shuffle",
        "//common/tags",
        "//common/unsafe",
        "//launcher",
        "@maven//:com_clearspring_analytics_stream",
        "@maven//:com_esotericsoftware_kryo",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_slf4j_slf4j_log4j12",
        "@maven//:com_fasterxml_jackson_module_jackson_module_scala_" + scala_rje,
        "@maven//:com_github_luben_zstd_jni",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_ning_compress_lzf",
        "@maven//:com_twitter_chill_" + scala_rje,
        "@maven//:com_twitter_chill_java",
        "@maven//:commons_codec_commons_codec",
        "@maven//:commons_collections_commons_collections",
        "@maven//:commons_io_commons_io",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:io_dropwizard_metrics_metrics_graphite",
        "@maven//:io_dropwizard_metrics_metrics_jmx",
        "@maven//:io_dropwizard_metrics_metrics_json",
        "@maven//:io_dropwizard_metrics_metrics_jvm",
        "@maven//:io_netty_netty_all",
        "@maven//:javax_servlet_javax_servlet_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:log4j_log4j",
        "@maven//:net_razorvine_pyrolite",
        "@maven//:net_sf_py4j_py4j",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_commons_commons_compress",
        "@maven//:org_apache_commons_commons_crypto",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_math3",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_apache_curator_curator_client",
        "@maven//:org_apache_curator_curator_framework",
        "@maven//:org_apache_curator_curator_recipes",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_hadoop_hadoop_hdfs_client",
        "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
        "@maven//:org_apache_hadoop_hadoop_yarn_api",
        "@maven//:org_apache_ivy_ivy",
        "@maven//:org_apache_xbean_xbean_asm7_shaded",
        "@maven//:org_apache_zookeeper_zookeeper",
        "@maven//:org_eclipse_jetty_jetty_client",
        "@maven//:org_eclipse_jetty_jetty_io",
        "@maven//:org_eclipse_jetty_jetty_proxy",
        "@maven//:org_eclipse_jetty_jetty_server",
        "@maven//:org_eclipse_jetty_jetty_servlet",
        "@maven//:org_eclipse_jetty_jetty_util",
        "@maven//:org_fusesource_leveldbjni_leveldbjni_all",
        "@maven//:org_glassfish_jersey_containers_jersey_container_servlet",
        "@maven//:org_glassfish_jersey_containers_jersey_container_servlet_core",
        "@maven//:org_glassfish_jersey_core_jersey_client",
        "@maven//:org_glassfish_jersey_core_jersey_common",
        "@maven//:org_glassfish_jersey_core_jersey_server",
        "@maven//:org_json4s_json4s_ast_" + scala_rje,
        "@maven//:org_json4s_json4s_core_" + scala_rje,
        "@maven//:org_json4s_json4s_jackson_" + scala_rje,
        "@maven//:org_lz4_lz4_java",
        "@maven//:org_roaringbitmap_RoaringBitmap",
        "@maven//:org_scala_lang_modules_scala_xml_" + scala_rje,
        "@maven//:org_glassfish_jersey_test_framework_providers_jersey_test_framework_provider_simple",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_xerial_snappy_snappy_java",
    ],
)

java_library(
    name = "version",
    resource_strip_prefix = "core/",
    resources = [
        ":spark-version-info",
    ],
)

genrule(
    name = "spark-version-info",
    srcs = ["//build:spark-build-info-bazel.sh"],
    outs = ["spark-version-info.properties"],
    cmd = "cat bazel-out/volatile-status.txt bazel-out/stable-status.txt | $(location //build:spark-build-info-bazel.sh) > $@",
    stamp = True,
)

[
    scala_library(
        name = "test",
        srcs = glob(
            [
                "src/test/**/*.scala",
                "src/test/**/*.java",
            ],
            exclude = [
                "src/test/**/*Suite.java",
                "src/test/**/*Test.java",
                "src/test/**/*Benchmark.java",
                "src/test/**/*Suite.scala",
                "src/test/**/*Test.scala",
                "src/test/**/*Benchmark.scala",
                "src/test/**/*Benchmark.scala",
            ],
        ) + glob([
            "src/test/**/UISeleniumSuite.scala",
            "src/test/**/SparkSubmitSuite.scala",
            "src/test/**/TaskMetricsSuite.scala",
            "src/test/**/TaskMetricsSuite.scala",
            "src/test/**/TaskSchedulerImplSuite.scala",
            "src/test/**/KryoSerializerSuite.scala",
            "src/test/**/JsonProtocolSuite.scala",
            "src/test/**/SparkFunSuite.scala",
            "src/test/**/AccumulatorSuite.scala",
            "src/test/**/ClosureCleanerSuite.scala",
            "src/test/**/Benchmark.scala",
            "src/test/**/ShuffleInMemorySorterSuite.java",
            "src/test/**/GenericFileInputStreamSuite.java",
            "src/test/**/AbstractBytesToBytesMapSuite.java",
            "src/test/**/UnsafeInMemorySorterSuite.java",
            "src/test/**/MemoryManagerSuite.scala",
            "src/test/**/EncryptionFunSuite.scala",
            "src/test/**/ShuffleSuite.scala",
            "src/test/**/DAGSchedulerSuite.scala",
            "src/test/**/RpcEnvSuite.scala",
            "src/test/**/UnsafeExternalSorterSuite.java",
            "src/test/**/PairRDDFunctionsSuite.scala",
            "src/test/**/SchedulerIntegrationSuite.scala",
            "src/test/**/ExternalClusterManagerSuite.scala",
            "src/test/**/CoarseGrainedSchedulerBackendSuite.scala",
            "src/test/**/HistoryServerSuite.scala",
        ]),
        javacopts = [
            "-Xep:TryFailThrowable:WARN",
        ],
        visibility = ["//visibility:public"],
        deps = [
            ":core",
            "//common/network-common",
            "//common/network-shuffle",
            "//common/unsafe",
            "//launcher",
            "//third_party:scalatest",
            "@maven//:com_esotericsoftware_kryo",
            "@maven//:com_fasterxml_jackson_core_jackson_core",
            "@maven//:com_google_code_findbugs_jsr305",
            "@maven//:com_google_guava_guava",
            "@maven//:commons_io_commons_io",
            "@maven//:io_dropwizard_metrics_metrics_core",
            "@maven//:io_netty_netty_all",
            "@maven//:javax_servlet_javax_servlet_api",
            "@maven//:junit_junit",
            "@maven//:log4j_log4j",
            "@maven//:org_apache_commons_commons_lang3",
            "@maven//:org_apache_commons_commons_math3",
            "@maven//:org_apache_hadoop_hadoop_common",
            "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
            "@maven//:org_apache_ivy_ivy",
            "@maven//:org_eclipse_jetty_jetty_proxy",
            "@maven//:org_eclipse_jetty_jetty_server",
            "@maven//:org_eclipse_jetty_jetty_servlet",
            "@maven//:org_eclipse_jetty_jetty_util",
            "@maven//:org_hamcrest_hamcrest",
            "@maven//:org_json4s_json4s_ast_" + scala_rje,
            "@maven//:org_json4s_json4s_core_" + scala_rje,
            "@maven//:org_json4s_json4s_jackson_" + scala_rje,
            "@maven//:org_mockito_mockito_core",
            "@maven//:org_roaringbitmap_RoaringBitmap",
            "@maven//:org_scala_lang_modules_scala_xml_" + scala_rje,
            "@maven//:net_sourceforge_htmlunit_htmlunit",
            "@maven//:org_seleniumhq_selenium_selenium_api",
            "@maven//:org_seleniumhq_selenium_selenium_htmlunit_driver",
            "@maven//:org_slf4j_slf4j_api",
            "@maven//:org_w3c_css_sac",
        ],
    )
    for _ in bazel_tests_enabled
    if _
]

[
    [java_test(
        name = src[:-5],
        srcs = [
            src,
        ],
        data = [
            "//bin",
        ],
        javacopts = [
            "-Xep:TryFailThrowable:WARN",
        ],
        jvm_flags = [
            "-Dspark.test.home=.",
        ],
        runtime_deps = [
            "@maven//:org_apache_derby_derby",
        ],
        deps = [
            ":core",
            ":test",
            "//common/network-common",
            "//common/unsafe",
            "//launcher",
            "//launcher:test",
            "@io_bazel_rules_scala_scala_library",
            "@maven//:com_google_guava_guava",
            "@maven//:commons_io_commons_io",
            "@maven//:junit_junit",
            "@maven//:org_apache_commons_commons_lang3",
            "@maven//:org_apache_hadoop_hadoop_common",
            "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
            "@maven//:org_hamcrest_hamcrest",
            "@maven//:org_mockito_mockito_core",
        ],
    ) for src in glob(
        [
            "src/test/**/*Suite.java",
            "src/test/**/*Test.java",
            "src/test/**/*Benchmark.java",
        ],
        exclude = [
            # abstract interfaces, not a tests
            "src/test/**/GenericFileInputStreamSuite.java",
            "src/test/**/AbstractBytesToBytesMapSuite.java",
            # fail, possibly related to java version
            "src/test/**/TaskMemoryManagerSuite.java",
            # requires spark-class with fixed jar locations
            "src/test/**/SparkLauncherSuite.java",
        ],
    )]
    for _ in bazel_tests_enabled
    if _
]

[
    [scala_test(
        name = src[:-6],
        srcs = [
            src,
        ],
        data = [
            "//bin",
        ],
        jvm_flags = [
            "-Dspark.test.home=.",
        ],
        resources = glob([
            "src/test/resources/**",
        ]),
        unused_dependency_checker_mode = "off",
        runtime_deps = [
            "@maven//:org_apache_derby_derby",
            "@maven//:oro_oro",
        ],
        deps = [
            ":core",
            ":test",
            "//common/kvstore",
            "//common/network-common",
            "//common/network-shuffle",
            "//common/network-shuffle:test",
            "//common/unsafe",
            "//launcher",
            "@maven//:com_esotericsoftware_kryo",
            "@maven//:com_fasterxml_jackson_core_jackson_core",
            "@maven//:com_google_code_findbugs_jsr305",
            "@maven//:com_google_guava_guava",
            "@maven//:commons_io_commons_io",
            "@maven//:io_dropwizard_metrics_metrics_core",
            "@maven//:io_netty_netty_all",
            "@maven//:javax_servlet_javax_servlet_api",
            "@maven//:javax_ws_rs_javax_ws_rs_api",
            "@maven//:log4j_log4j",
            "@maven//:org_apache_avro_avro",
            "@maven//:org_apache_commons_commons_lang3",
            "@maven//:org_apache_commons_commons_math3",
            "@maven//:org_apache_curator_curator_test",
            "@maven//:org_apache_hadoop_hadoop_common",
            "@maven//:org_apache_hadoop_hadoop_hdfs_client",
            "@maven//:org_apache_hadoop_hadoop_mapreduce_client_core",
            "@maven//:org_apache_hadoop_hadoop_minikdc",
            "@maven//:org_apache_ivy_ivy",
            "@maven//:org_eclipse_jetty_jetty_proxy",
            "@maven//:org_eclipse_jetty_jetty_server",
            "@maven//:org_eclipse_jetty_jetty_servlet",
            "@maven//:org_eclipse_jetty_jetty_util",
            "@maven//:org_glassfish_jersey_inject_jersey_hk2",
            "@maven//:org_json4s_json4s_ast_" + scala_rje,
            "@maven//:org_json4s_json4s_core_" + scala_rje,
            "@maven//:org_json4s_json4s_jackson_" + scala_rje,
            "@maven//:org_mockito_mockito_core",
            "@maven//:org_roaringbitmap_RoaringBitmap",
            "@maven//:org_scala_lang_modules_scala_xml_" + scala_rje,
            "@maven//:org_scalacheck_scalacheck_" + scala_rje,
            "@maven//:org_scalatest_scalatest_" + scala_rje,
            "@maven//:net_sourceforge_htmlunit_htmlunit",
            "@maven//:net_sourceforge_htmlunit_htmlunit_core_js",
            "@maven//:org_seleniumhq_selenium_selenium_api",
            "@maven//:org_seleniumhq_selenium_selenium_htmlunit_driver",
            "@maven//:org_seleniumhq_selenium_selenium_java",
            "@maven//:org_slf4j_slf4j_api",
            "@maven//:org_w3c_css_sac",
        ],
    ) for src in glob(
        [
            "src/test/**/*Suite.scala",
            "src/test/**/*Benchmark.scala",
            "src/test/**/*Test.scala",
        ],
        exclude = [
            # requires resource files on the classpath that scala_test does not support
            "src/test/**/HistoryServerSuite.scala",
            "src/test/**/SSLOptionsSuite.scala",
            "src/test/**/ProcfsMetricsGetterSuite.scala",
            "src/test/**/PoolSuite.scala",
            "src/test/**/UISuite.scala",
            "src/test/**/TaskContextSuite.scala",
            "src/test/**/MetricsSystemSuite.scala",
            "src/test/**/MetricsConfigSuite.scala",
            # requires spark-class with fixed jar locations
            "src/test/**/SparkUncaughtExceptionHandlerSuite.scala",
            "src/test/**/LauncherBackendSuite.scala",
            # related to launching subprocesses
            "src/test/**/TaskSetManagerSuite.scala",
            "src/test/**/SparkListenerWithClusterSuite.scala",
            "src/test/**/ResourceDiscoveryPluginSuite.scala",
            "src/test/**/ExternalAppendOnlyMapSuite.scala",
            "src/test/**/KryoSerializerDistributedSuite.scala",
            "src/test/**/BroadcastSuite.scala",
            "src/test/**/SparkContextSuite.scala",
            "src/test/**/ShuffleOldFetchProtocolSuite.scala",
            "src/test/**/ExternalShuffleServiceSuite.scala",
            "src/test/**/PluginContainerSuite.scala",
            "src/test/**/ShuffleDriverComponentsSuite.scala",
            "src/test/**/BarrierTaskContextSuite.scala",
            "src/test/**/ContextCleanerSuite.scala",
            "src/test/**/CryptoStreamUtilsSuite.scala",
            # wants to use ".." to reference files
            "src/test/**/SparkSubmitSuite.scala",
            # this depends on curator which requires an earlier version of
            # guava than we use. The new version fails for other
            # reasons. We don't use it anyway, so exlude for now.
            "src/test/**/PersistenceEngineSuite.scala",
            # "Only one SparkContext should be running in this JVM"
            "src/test/**/ExternalSorterSuite.scala",
            "src/test/**/WorkerDecommissionSuite.scala",
            "src/test/**/ReplayListenerSuite.scala",
            "src/test/**/EventLoggingListenerSuite.scala",
            "src/test/**/CoarseGrainedSchedulerBackendSuite.scala",
            "src/test/**/JobCancellationSuite.scala",
            "src/test/**/DistributedSuite.scala",
            "src/test/**/LogUrlsStandaloneSuite.scala",
            "src/test/**/SortShuffleSuite.scala",
            "src/test/**/ShuffleNettySuite.scala",
        ],
    )]
    for _ in bazel_tests_enabled
    if _
]
