load("//:defs.bzl", "scala_rje")

scala_library(
    name = "graphx",
    srcs = glob([
        "src/main/java/**/*.java",
        "src/main/scala/**/*.scala",
    ]),
    tags = [
        "maven_coordinates=org.apache.spark:spark-graphx_" + scala_rje + ":" + spark_version,
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//mllib-local",
        "@maven//:com_github_fommil_netlib_all",
        "@maven//:org_apache_xbean_xbean_asm7_shaded",
        "@maven//:org_scalanlp_breeze_" + scala_rje,
        "@maven//:org_slf4j_slf4j_api",
    ],
)
