load("//:defs.bzl", "scala_rje")

scala_library(
    name = "mllib-local",
    srcs = glob([
        "src/main/scala/**/*.scala",
    ]),
    tags = [
        "maven_coordinates=org.apache.spark:spark-mllib-local_" + scala_rje + ":" + spark_version,
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common/tags",
        "@maven//:com_github_fommil_netlib_all",
        "@maven//:org_scalanlp_breeze_" + scala_rje,
    ],
)
