load("@rules_java//java:defs.bzl", "java_binary")

scala_library(
    name = "library",
    srcs = glob([
        "src/main/scala/**/*.scala",
        "src/main/scala-2.12/**/*.scala",
    ]),
    tags = [
        "maven_coordinates=org.apache.spark:spark-repl_" + scala_rje + ":" + spark_version,
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//sql/catalyst",
        "//sql/core",
        "@io_bazel_rules_scala_scala_compiler",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_xbean_xbean_asm7_shaded",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "repl",
    args = [
        "--master",
        "local",
        "--class",
        "org.apache.spark.repl.Main",
        "spark-internal",
    ],
    jvm_flags = [
        "--add-exports java.base/jdk.internal.misc=ALL-UNNAMED",
        "-Dio.netty.tryReflectionSetAccessible=true",
        "-Dscala.usejavacp=true",
    ],
    main_class = "org.apache.spark.deploy.SparkSubmit",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":library",
    ],
)

[
    [scala_test(
        name = src[:-6],
        srcs = [
            src,
        ],
        data = [
            "//bin",
        ],
        jvm_flags = [
            "-Dspark.test.home=.",
        ],
        resources = glob([
            "src/test/resources/**",
        ]),
        unused_dependency_checker_mode = "off",
        deps = [
            ":repl",
            "//common/network-common",
            "//core",
            "//core:test",
            "//sql/catalyst",
            "//sql/core",
            "@io_bazel_rules_scala_scala_compiler",
            "@maven//:com_google_guava_guava",
            "@maven//:log4j_log4j",
            "@maven//:org_apache_commons_commons_text",
            "@maven//:org_mockito_mockito_core",
            "@maven//:org_slf4j_slf4j_api",
        ],
    ) for src in glob(
        [
            "src/test/**/*Suite.scala",
            "src/test/**/*Benchmark.scala",
            "src/test/**/*Test.scala",
        ],
    )]
    for _ in bazel_tests_enabled
    if _
]
