load("@rules_java//java:defs.bzl", "java_test")

scala_library(
    name = "kvstore",
    srcs = glob([
        "src/main/**/*.java",
        "src/main/**/*.scala",
    ]),
    tags = [
        "maven_coordinates=org.apache.spark:spark-kvstore_" + scala_rje + ":" + spark_version,
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//common/tags",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_guava_guava",
        "@maven//:org_fusesource_leveldbjni_leveldbjni_all",
    ],
)

[
    scala_library(
        name = "test",
        srcs = glob([
            "src/test/**/*.java",
        ]),
        deps = [
            ":kvstore",
            "@maven//:com_google_guava_guava",
            "@maven//:commons_io_commons_io",
            "@maven//:io_dropwizard_metrics_metrics_core",
            "@maven//:junit_junit",
            "@maven//:org_fusesource_leveldbjni_leveldbjni_all",
            "@maven//:org_slf4j_slf4j_api",
        ],
    )
    for _ in bazel_tests_enabled
    if _
]

[
    [java_test(
        name = src[:-5],
        srcs = [
            src,
        ],
        resources = glob(["src/test/resources/**"]),
        deps = [
            ":kvstore",
            ":test",
            "@maven//:com_google_guava_guava",
            "@maven//:commons_io_commons_io",
            "@maven//:io_dropwizard_metrics_metrics_core",
            "@maven//:junit_junit",
            "@maven//:org_fusesource_leveldbjni_leveldbjni_all",
            "@maven//:org_slf4j_slf4j_api",
        ],
    ) for src in glob(
        [
            "src/test/**/*Suite.java",
            "src/test/**/*Benchmark.java",
        ],
        exclude = [
            "src/test/**/DBIteratorSuite.java",
        ],
    )]
    for _ in bazel_tests_enabled
    if _
]
