scala_library(
    name = "sketch",
    srcs = glob([
        "src/main/**/*.java",
        "src/main/**/*.scala",
    ]),
    tags = [
        "maven_coordinates=org.apache.spark:spark-sketch_" + scala_rje + ":" + spark_version,
    ],
    visibility = ["//visibility:public"],
)

[
    [scala_test(
        name = src[:-6],
        srcs = [
            src,
        ],
        deps = [
            ":sketch",
        ],
    ) for src in glob(
        [
            "src/test/**/*Suite.scala",
        ],
    )]
    for _ in bazel_tests_enabled
    if _
]
