scala_library(
    name = "tags",
    srcs = glob([
        "src/main/**/*.scala",
        "src/main/**/*.java",
    ]),
    visibility = ["//visibility:public"],
)

scala_library(
    name = "test",
    srcs = glob([
        "src/test/**/*.scala",
        "src/test/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//third_party:scalatest",
    ],
)
