scala_library(
    name = "tags",
    srcs = glob([
        "src/main/**/*.scala",
        "src/main/**/*.java",
    ]),
    tags = [
        "maven_coordinates=org.apache.spark:spark-tags_" + scala_rje + ":" + spark_version,
    ],
    visibility = ["//visibility:public"],
)

# these are not actually tests but instead tags/annotations used in tests

scala_library(
    name = "test",
    srcs = glob([
        "src/test/**/*.scala",
        "src/test/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//third_party:scalatest",
    ],
)
